opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/pythonlib"
bug-reports: "https://github.com/janestreet/pythonlib/issues"
dev-repo: "git+https://github.com/janestreet/pythonlib.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/pythonlib/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.11.0" & < "4.13.0"}
  "base"
  "ppx_expect"
  "ppx_let"
  "ppx_python"
  "stdio"
  "typerep"
  "dune"       {>= "2.0.0"}
  "pyml"       {>= "20211015"}
]
synopsis: "A library to help writing wrappers around ocaml code for python"
description: "
This library helps exposing ocaml functions to python. The python runtime interaction is handled by pyml.
"
